# VRRayTracing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  libGLEW.so.1.10.0  libOVRRT64_0.so.5.0.1  libglfw.so.3.1  readme.md
CMU462/: Makefile  cmake_install.cmake
CMU462/include/CMU462/: spectrum.h
CMU462/src/: Makefile  cmake_install.cmake
autogen/: g_shaders.h
dae/: CBspheres_water.dae  bean_water.dae  beetle_water.dae  teapot_water.dae
src/: CMakeLists.txt  application.cpp  application.h  bbox.cpp  bsdf.h  camera.cu  glfw_main.cpp  main.cpp  main_include.cpp
src/AppSkeleton/: AppSkeleton.cpp  AppSkeleton.h  OVRSDK05AppSkeleton.cpp  OVRSDK05AppSkeleton.h
src/FlyingMouse/: FlyingMouse.h
src/Scene/: HydraScene.cpp  HydraScene.h  IScene.h  OVRScene.cpp  OVRScene.h  Scene.cu  Scene.h  pathtracer.h
src/Util/GL/: FBO.cpp
src/Util/glm/detail/: func_integer.inl
src/Util/glm/gtc/: ulp.inl
src/collada/: collada.cpp  material_info.h
src/gpu/: bbox.cu  bbox.h  bsdf.cu  bsdf.h  bvhGPU.cu  bvhGPU.h  intersection.h  light.cu  light.h  matrix3x3.cu  matrix3x3.h  matrix4x4.cu  matrix4x4.h  misc.h  pathtracer.cu  pathtracer.h  primitiveGPU.cu  primitiveGPU.h  ray.h  rayBenchmark.cu  sampler.cu  spectrum.h  vector2D.h  vector3D.h  vector4D.cu  vector4D.h
src/pathtracer/: CMakeLists.txt  Makefile  cmake_install.cmake
src/pathtracer/CMU462/: Makefile  cmake_install.cmake
src/pathtracer/CMU462/include/CMU462/: CMU462.h  matrix3x3.h  misc.h  spectrum.h
src/pathtracer/CMU462/src/: Makefile  cmake_install.cmake
src/pathtracer/dae/: CBcoil_Hg.dae  CBcoil_water.dae
src/pathtracer/src/: CMakeCache.txt  CMakeLists.txt  Makefile  application.cpp  application.h  bsdf.cpp  bvh.cpp  bvh.h  camera.cu  camera.h  cmake_install.cmake  intersection.h  main.cpp  sampler.cpp
src/pathtracer/src/collada/: collada.cpp
src/pathtracer/src/gpu/: bbox.cu  bbox.h  bsdf.cu  bsdf.h  bvhGPU.cu  bvhGPU.h  intersection.h  light.cu  light.h  matrix3x3.cu  matrix3x3.h  matrix4x4.cu  matrix4x4.h  misc.h  pathtracer.cu  pathtracer.h  primitiveGPU.cu  primitiveGPU.h  ray.h  rayBenchmark.cu  rayBenchmark.h  sampler.cu  sampler.h  spectrum.h  vector2D.h  vector3D.h  vector4D.cu  vector4D.h
src/pathtracer/src/static_scene/: aggregate.h  object.cpp  object.h  primitive.h  scene.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/static_scene/: object.cpp  object.h  scene.h  triangle.cpp  triangle.h
